# recap

./: .gitignore  LICENSE  README.md  prepare_data.sh  pyproject.toml
docs/: adding_new_datasets.md  adding_new_robot_models.md  downloading_data.md  solving_ik.md
examples/: fit_amass_beta.py  forward_kinematics.py  play_trajectory.py  rendering.py  retarget_amass.py  retarget_cmu.py  retarget_lafan.py  retarget_optitrack.py
recap/: mapped_ik.py  quat_utils.py  torch_fk.py  trajectory.py  velocity_estimator.py  wbik_solver.py
recap/amass/: data_loader.py  motion_wrapper.py  retarget.py  transforms.py
recap/cmu/: amc_parser.py  retarget.py
recap/config/: amass_retarget_config.py  cmu_retarget_config.py  lafan_retarget_config.py  mapped_ik_config.py  optitrack_retarget_config.py  wbik_config.py
recap/config/robot/: g1.py  h1.py
recap/lafan/: retarget.py
recap/mujoco/: marker_set.py  model_editor.py  renderer.py
recap/optitrack/: csv_parser.py  retarget.py
tests/: test_integration.py
