

[project]
name = "recap"
description = "Motion capture retargeting library for humanoid robots"
version = "1.0.0"
authors = [{ name = "Eduard Zaliaev" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "robot_descriptions",
    "pin == 3.3.1",
    "pin_pink == 3.1.0",
    "mujoco == 3.2.7",
    "torch == 2.6.0",
    "joblib == 1.4.2",
    "scipy == 1.15.1",
    "mediapy == 1.2.2",
]

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["recap"]

[tool.ruff]
lint.select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
line-length = 120





